chore: add proper 'homepage' property to packages' packge.json files

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
     "type": "git",
     "url": "https://github.com/loilo/codepatch.git"
   },
+  "homepage": "https://github.com/loilo/codepatch/tree/main/packages/core#readme",
   "license": "MIT",
   "author": {
     "name": "Florian Reuschel",
